--- a/.babelrc
+++ b/.babelrc
@@ -6,13 +6,14 @@
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
     }],
-    "stage-3"
+    "stage-3",
+    "vue"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "plugins": ["transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-3"],
-      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node"]
+      "presets": ["env", "stage-3", "vue"],
+      "plugins": ["transform-es2015-modules-commonjs", "dynamic-import-node"]
     }
   }
 }
