--- a/package.json
+++ b/package.json
@@ -66,6 +66,11 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "wdio-chromedriver-service": "^0.1.3",
+    "wdio-mocha-framework": "^0.6.3",
+    "wdio-screenshots-cleanup-service": "0.0.7",
+    "wdio-selenium-standalone-service": "0.0.10",
+    "wdio-visual-regression-service": "^0.9.0",
     "webdriverio": "^4.13.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
