--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-preset-vue": "^2.0.2",
+    "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "chromedriver": "^2.31.0",
     "copy-webpack-plugin": "^4.0.1",
