--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "wdio-mocha-framework": "^0.6.3",
     "wdio-screenshots-cleanup-service": "0.0.7",
     "wdio-selenium-standalone-service": "0.0.10",
+    "wdio-spec-reporter": "^0.1.5",
     "wdio-visual-regression-service": "^0.9.0",
     "webdriverio": "^4.13.2",
     "webpack": "^3.6.0",
