--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.5.0",
     "jest-serializer-vue": "^0.3.0",
+    "json-stable-stringify": "^1.0.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
