--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ yarn-error.log*
 *.sln
 
 test/browser/tests/testdata/actual/*
+
 !test/browser/tests/testdata/actual/search-results/
 test/browser/tests/testdata/actual/search-results/*
 !test/browser/tests/testdata/actual/search-results/.commit-empty-directory
+
+!test/browser/tests/testdata/actual/preview-pane/
+test/browser/tests/testdata/actual/preview-pane/*
+!test/browser/tests/testdata/actual/preview-pane/.commit-empty-directory
