--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "chromedriver": "^2.31.0",
+    "command-exists": "^1.2.7",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
