--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 
-test/browser/diffs/*
-!test/browser/diffs/.commit-empty-directory
-
 test/browser/tests/testdata/actual/*
 
 !test/browser/tests/testdata/actual/search-results/
@@ -27,3 +24,6 @@ test/browser/tests/testdata/actual/search-results/*
 !test/browser/tests/testdata/actual/preview-pane/
 test/browser/tests/testdata/actual/preview-pane/*
 !test/browser/tests/testdata/actual/preview-pane/.commit-empty-directory
+
+test/browser/tests/testdata/diffs/*
+!test/browser/tests/testdata/diffs/.commit-empty-directory
