--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "test:unit": "npm run unit",
+    "test:unit": "jest --config test/unit/jest.conf.js --coverage",
     "test:browser:local": "node_modules/.bin/wdio test/browser/conf/wdio.local.conf.js",
     "lint": "eslint --ext .js,.vue src test/unit",
     "build": "node build/build.js"
