package.json: add scripts "test" and "test:browser:*"

--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "test:unit": "jest --config test/unit/jest.conf.js --coverage",
+    "test": "npm run test:unit && npm run test:browser:local",
     "test:browser:local": "node_modules/.bin/wdio test/browser/conf/wdio.local.conf.js",
+    "test:browser:local:debug:chrome": "node_modules/.bin/wdio test/browser/conf/wdio.local.debug-chrome.conf.js",
+    "test:browser:local:debug:firefox": "node_modules/.bin/wdio test/browser/conf/wdio.local.debug-firefox.conf.js",
+    "test:unit": "jest --config test/unit/jest.conf.js --coverage",
     "lint": "eslint --ext .js,.vue src test/unit",
     "build": "node build/build.js"
   },
