--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "build": "node $NODE_DEBUG_OPTION build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "d3": "^5.7.0",
+    "d3-tip": "^0.9.1",
+    "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
