--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "d3": "^5.7.0",
     "d3-tip": "^0.9.1",
+    "font-awesome": "4.7.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
