.gitignore: bring in patterns from previous version

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,26 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+/tests/browser/errorShots/
+/tests/unit/coverage/
+
+/tests/browser/tests/testdata/actual/*
+
+!/tests/browser/tests/testdata/actual/search-results/
+/tests/browser/tests/testdata/actual/search-results/*
+!/tests/browser/tests/testdata/actual/search-results/.commit-empty-directory
+
+!/tests/browser/tests/testdata/actual/preview-pane/
+/tests/browser/tests/testdata/actual/preview-pane/*
+!/tests/browser/tests/testdata/actual/preview-pane/.commit-empty-directory
+
+/tests/browser/tests/testdata/diffs/*
+
+!/tests/browser/tests/testdata/diffs/preview-pane/
+/tests/browser/tests/testdata/diffs/preview-pane/*
+!/tests/browser/tests/testdata/diffs/preview-pane/.commit-empty-directory
+
+!/tests/browser/tests/testdata/diffs/search-results/
+/tests/browser/tests/testdata/diffs/search-results/*
+!/tests/browser/tests/testdata/diffs/search-results/.commit-empty-directory
