--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "d3": "^5.7.0",
+    "d3-tip": "^0.9.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
