--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "d3": "^5.7.0",
     "d3-tip": "^0.9.1",
+    "font-awesome": "4.7.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
