--- a/package.json
+++ b/package.json
@@ -34,11 +34,22 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
+    "chromedriver": "^2.31.0",
+    "command-exists": "^1.2.7",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "json-stable-stringify": "^1.0.1",
     "node-sass": "^4.9.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "wdio-chromedriver-service": "^0.1.3",
+    "wdio-mocha-framework": "^0.6.3",
+    "wdio-screenshots-cleanup-service": "0.0.7",
+    "wdio-selenium-standalone-service": "0.0.11",
+    "wdio-spec-reporter": "^0.1.5",
+    "wdio-visual-regression-service": "^0.9.0",
+    "webdriverio": "^4.13.2"
   },
   "engines": {
     "node": ">= 6.0.0",
