--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build:dev": "vue-cli-service build --mode dev",
+    "build:stage": "vue-cli-service build --mode stage",
+    "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint",
     "test": "npm run test:unit && npm run test:browser:local",
     "test:browser:local": "node_modules/.bin/wdio tests/browser/conf/wdio.local.conf.js",
