Add VUE_APP_GOOGLE_ANALYTICS env var to .env.* files

--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,5 @@ NODE_ENV=production
 VUE_APP_SOLR_HOST=dev-discovery.dlib.nyu.edu
 VUE_APP_SOLR_PORT=8983
 VUE_APP_SOLR_PROTOCOL=http
+
+VUE_APP_GOOGLE_ANALYTICS=false
