--- a/.env.stage
+++ b/.env.stage
@@ -4,3 +4,5 @@ NODE_ENV=production
 VUE_APP_SOLR_HOST=stagediscovery.dlib.nyu.edu
 VUE_APP_SOLR_PORT=8983
 VUE_APP_SOLR_PROTOCOL=http
+
+VUE_APP_GOOGLE_ANALYTICS=false
