--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ VUE_APP_SOLR_HOST=dev-discovery.dlib.nyu.edu
 VUE_APP_SOLR_PORT=8983
 VUE_APP_SOLR_PROTOCOL=http
 
-VUE_APP_GOOGLE_ANALYTICS=false
+# Uncomment this to include GA <script> code in <head> of index.html
+VUE_APP_GOOGLE_ANALYTICS_TRACKING_ID=UA-XXXXXXXX-X
