--- a/.env.prod
+++ b/.env.prod
@@ -8,4 +8,5 @@ VUE_APP_SOLR_HOST=stagediscovery.dlib.nyu.edu
 VUE_APP_SOLR_PORT=8983
 VUE_APP_SOLR_PROTOCOL=http
 
-VUE_APP_GOOGLE_ANALYTICS=true
+# Uncomment this to include GA <script> code in <head> of index.html
+VUE_APP_GOOGLE_ANALYTICS_TRACKING_ID=UA-51495518-4
