--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "@wdio/cli": "^5.7.12",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "command-exists": "^1.2.7",
@@ -49,7 +50,8 @@
     "node-sass": "^4.9.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webdriverio": "^5.7.12"
   },
   "engines": {
     "node": ">= 6.0.0",
