--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@wdio/cli": "^5.7.12",
     "@wdio/local-runner": "^5.7.12",
     "@wdio/mocha-framework": "^5.7.8",
+    "@wdio/selenium-standalone-service": "^5.7.8",
+    "@wdio/spec-reporter": "^5.7.9",
     "@wdio/sync": "^5.7.9",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
