--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17",
+    "webdriver": "5.7.12",
     "webdriverio": "^5.7.12"
   },
   "engines": {
