tests: add headless Chrome-only and Firefox-only configurations and scripts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "vue-cli-service lint",
     "test": "npm run test:browser:local",
     "test:browser:local": "node_modules/.bin/wdio tests/browser/conf/wdio.local.conf.js",
+    "test:browser:local:chrome": "node_modules/.bin/wdio tests/browser/conf/wdio.local.chrome.conf.js",
     "test:browser:local:chrome:debug": "node_modules/.bin/wdio tests/browser/conf/wdio.local.chrome.debug.conf.js",
+    "test:browser:local:firefox": "node_modules/.bin/wdio tests/browser/conf/wdio.local.firefox.conf.js",
     "test:browser:local:firefox:debug": "node_modules/.bin/wdio tests/browser/conf/wdio.local.firefox.debug.conf.js",
     "test:browser:dev": "node_modules/.bin/wdio tests/browser/conf/wdio.dev.conf.js",
     "test:browser:stage": "node_modules/.bin/wdio tests/browser/conf/wdio.stage.conf.js",
