--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@vue/cli-plugin-unit-mocha": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "@wdio/cli": "^5.7.12",
     "@wdio/local-runner": "^5.7.12",
     "@wdio/mocha-framework": "^5.7.8",
@@ -50,15 +50,24 @@
     "@wdio/spec-reporter": "^5.7.9",
     "@wdio/sync": "^5.7.9",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "chai": "^4.1.2",
     "command-exists": "^1.2.7",
     "dlts-solr-fake": "https://github.com/nyulibraries/dlts-solr-fake#v0.2.0",
     "eslint": "^5.8.0",
+    "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-vue": "^5.0.0-0",
+    "jest": "^24.8.0",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-transform-stub": "^2.0.0",
+    "jest-watch-typeahead": "^0.3.1",
     "json-stable-stringify": "^1.0.1",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.1",
     "node-sass": "^4.9.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
+    "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.5.17",
     "webdriver": "5.7.12",
     "webdriverio": "^5.7.12"
