--- a/package.json
+++ b/package.json
@@ -27,37 +27,37 @@
         "test:unit": "vue-cli-service test:unit"
     },
     "dependencies": {
-        "d3": "^5.7.0",
+        "d3": "^5.9.2",
         "d3-tip": "^0.9.1",
         "font-awesome": "4.7.0",
-        "vue": "^2.5.17",
-        "vuex": "^3.0.1"
+        "vue": "^2.6.10",
+        "vuex": "^3.1.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.2.0",
-        "@babel/core": "^7.2.0",
-        "@babel/preset-env": "^7.2.0",
-        "@babel/register": "^7.0.0",
-        "@vue/cli-plugin-babel": "^3.2.0",
-        "@vue/cli-plugin-eslint": "^3.2.0",
+        "@babel/cli": "^7.4.4",
+        "@babel/core": "^7.4.5",
+        "@babel/preset-env": "^7.4.5",
+        "@babel/register": "^7.4.4",
+        "@vue/cli-plugin-babel": "^3.8.0",
+        "@vue/cli-plugin-eslint": "^3.8.0",
         "@vue/cli-plugin-unit-jest": "^3.8.0",
-        "@vue/cli-service": "^3.2.0",
+        "@vue/cli-service": "^3.8.4",
         "@vue/eslint-config-standard": "^4.0.0",
         "@vue/test-utils": "^1.0.0-beta.29",
-        "@wdio/cli": "^5.7.12",
-        "@wdio/local-runner": "^5.7.12",
-        "@wdio/mocha-framework": "^5.7.8",
-        "@wdio/selenium-standalone-service": "^5.7.8",
-        "@wdio/spec-reporter": "^5.7.9",
-        "@wdio/sync": "^5.7.9",
-        "babel-eslint": "^10.0.1",
+        "@wdio/cli": "^5.10.7",
+        "@wdio/local-runner": "^5.10.7",
+        "@wdio/mocha-framework": "^5.10.1",
+        "@wdio/selenium-standalone-service": "^5.9.3",
+        "@wdio/spec-reporter": "^5.9.3",
+        "@wdio/sync": "^5.10.1",
+        "babel-eslint": "^10.0.2",
         "babel-jest": "^24.8.0",
         "chai": "^4.1.2",
         "command-exists": "^1.2.7",
         "dlts-solr-fake": "https://github.com/nyulibraries/dlts-solr-fake#v0.2.0",
-        "eslint": "^5.8.0",
+        "eslint": "^5.16.0",
         "eslint-plugin-jest": "^22.6.4",
-        "eslint-plugin-vue": "^5.0.0-0",
+        "eslint-plugin-vue": "^5.2.2",
         "jest": "^24.8.0",
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
@@ -65,13 +65,13 @@
         "json-stable-stringify": "^1.0.1",
         "lodash.clonedeep": "^4.5.0",
         "lodash.merge": "^4.6.1",
-        "node-sass": "^4.9.0",
-        "rimraf": "^2.6.2",
+        "node-sass": "^4.12.0",
+        "rimraf": "^2.6.3",
         "sass-loader": "^7.0.1",
         "vue-jest": "^3.0.4",
-        "vue-template-compiler": "^2.5.17",
-        "webdriver": "5.7.12",
-        "webdriverio": "^5.7.12"
+        "vue-template-compiler": "^2.6.10",
+        "webdriver": "5.10.4",
+        "webdriverio": "^5.10.7"
     },
     "engines": {
         "node": ">= 6.0.0",
