--- a/package.json
+++ b/package.json
@@ -98,9 +98,9 @@
         ],
         "testURL": "http://localhost/",
         "transform": {
-            "^.+\\.jsx?$": "babel-jest",
+            "^.+\\.vue$": "vue-jest",
             ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
-            "^.+\\.vue$": "vue-jest"
+            "^.+\\.jsx?$": "babel-jest"
         },
         "transformIgnorePatterns": [
             "/node_modules/"
