--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "node-sass": "^4.12.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.0.1",
+        "sinon": "^7.3.2",
         "vue-jest": "^3.0.4",
         "vue-template-compiler": "^2.6.10",
         "webdriver": "5.10.4",
