--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "json-stable-stringify": "^1.0.1",
         "lodash.clonedeep": "^4.5.0",
         "lodash.merge": "^4.6.1",
+        "lodash.mergewith": "^4.6.2",
         "node-sass": "^4.12.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.0.1",
