--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # This is for development mode.  This is not for deployment to devweb1.dlib.nyu.edu.
-# See .env.dev file for devwe1b.dlib.nyu.edu configuration.
+# See .env.dev file for devweb1.dlib.nyu.edu configuration.
 
 VUE_APP_SOLR_HOST=discovery1.dlib.nyu.edu
 VUE_APP_SOLR_PORT=443
