package.json -- deploy scripts: deploy to s3 buckets instead of *web1 cluster

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "build:dev": "vue-cli-service build --mode dev",
         "build:stage": "vue-cli-service build --mode stage",
         "build:prod": "vue-cli-service build --mode prod",
-        "deploy:dev": "yarn run build:dev; rsync --archive --compress --delete --human-readable --verbose dist/ devweb1:/www/sites/enm/search/; yarn test:browser:dev",
-        "deploy:stage": "yarn run build:stage; rsync --archive --compress --delete --human-readable --verbose dist/ stageweb1:/www/sites/enm/search/; yarn test:browser:stage",
-        "deploy:prod": "yarn run build:prod; rsync --archive --compress --delete --human-readable --verbose dist/ web1:/www/sites/enm/search/; yarn test:browser:prod",
+        "deploy:dev": "yarn run build:dev; aws s3 sync dist/ s3://dlts-enm-dev/search --exact-timestamps --exclude '.gitkeep'; yarn test:browser:dev",
+        "deploy:stage": "yarn run build:stage; aws s3 sync dist/ s3://dlts-enm-stage/search --exact-timestamps --exclude '.gitkeep'; yarn test:browser:stage",
+        "deploy:prod": "yarn run build:prod; aws s3 sync dist/ s3://dlts-enm/search --exact-timestamps --exclude '.gitkeep'; yarn test:browser:prod",
         "lint": "vue-cli-service lint",
         "test": "yarn run lint && yarn run test:unit && yarn run test:browser:local",
         "test:browser:local": "node_modules/.bin/wdio tests/browser/conf/wdio.local.conf.js",
