package.json BUGFIX: do full `s3 rm` before `s3 sync` -- see [s3 sync \-\-exact\-timestamps flag ignored for uploads \#4460](https://github.com/aws/aws-cli/issues/4460)

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         "deploy:stage": "yarn run build:stage; yarn run sync:stage; yarn cache:invalidate:stage; sleep 30; yarn test:browser:stage",
         "deploy:prod": "yarn run build:prod; yarn run sync:prod; yarn cache:invalidate:prod; sleep 30; yarn test:browser:prod",
         "lint": "vue-cli-service lint",
-        "sync:dev": "aws s3 sync dist/ s3://dlts-enm-dev/search --exact-timestamps --exclude '.gitkeep'",
-        "sync:stage": "aws s3 sync dist/ s3://dlts-enm-stage/search --exact-timestamps --exclude '.gitkeep'",
-        "sync:prod": "aws s3 sync dist/ s3://dlts-enm/search --exact-timestamps --exclude '.gitkeep'",
+        "sync:dev": "aws s3 rm s3://dlts-enm-dev/search --recursive && aws s3 sync dist/ s3://dlts-enm-dev/search",
+        "sync:stage": "aws s3 rm s3://dlts-enm-stage/search --recursive && aws s3 sync dist/ s3://dlts-enm-stage/search",
+        "sync:prod": "aws s3 rm s3://dlts-enm/search --recursive && aws s3 sync dist/ s3://dlts-enm/search",
         "test": "yarn run lint && yarn run test:unit && yarn run test:browser:local",
         "test:browser:local": "node_modules/.bin/wdio tests/browser/conf/wdio.local.conf.js",
         "test:browser:local:chrome": "node_modules/.bin/wdio tests/browser/conf/wdio.local.chrome.conf.js",
